fixed navBar alignment
also changed the positioning of ad ad ad ad

--- a/linkedin/src/App.css
+++ b/linkedin/src/App.css
@@ -5,3 +5,8 @@
 .App {
   background: rgb(231, 231, 231);
 }
+
+.text {
+  position: relative;
+  left: 30%;
+}
