--- a/linkedin/src/components/MainBody/mainBody.css
+++ b/linkedin/src/components/MainBody/mainBody.css
@@ -1,15 +1,21 @@
 .mainBody__container {
   justify-content: space-between;
+  padding: 0 15%;
 }
 
 .container__box-left {
   width: 15%;
+  height: 500px;
+  background: darkgrey;
 }
 
 .container__box-middle {
   width: 40%;
+  background: darkgrey;
 }
 
 .container__box-right {
   width: 25%;
+  height: 450px;
+  background: darkgrey;
 }
